schema/testdata/validation_attribute_orderby_invalid_args/schema.keel
model Publisher { }

model Author {
    fields {
        firstName Text
        surname Text
        publisher Publisher
    }

    actions {
        list listAuthors() {
            @orderBy
            @orderBy(firstName)
            @orderBy(firstName: asc, nope: asc)
            @orderBy(firstName: asc, publisher: asc)
            @orderBy(firstName: asc, firstName: asc)
            @orderBy(firstName: "asc")
            @orderBy(firstName: 123)
            @orderBy(firstName: ASC)
        }
    }
}